--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class='earth planet'>
         <div class='moon moon'>
           <h3>Satélite</h3>
-          <h2>Satélite</h2>
+          <h2>Lua</h2>
         </div>
         <div class='m trajectory'></div>
         <div class='earth planet_description'>
